<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Adds an item to the list. -->
    <item
        android:id="@+id/action_previous"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_previous"/>
    <item
        android:id="@+id/action_send_saved_sightings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_send_saved_sightings"/>    
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_info"/>
    <item
        android:id="@+id/action_instructions"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_instructions"/>
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_signout"/>

</menu>