<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sicon_faded"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <EditText
        android:id="@+id/firstname_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/textview_firstname"
        android:inputType="text" />

<!--     android:background="@android:drawable/editbox_background"
 -->    
    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstname_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/textview_lastname"
        android:inputType="text" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastname_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/textview_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/textview_password"
        android:inputType="textPassword" />
	
    <Button
        android:id="@+id/login_register_button"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:onClick="checkLogin"
        android:text="@string/button_register"
        android:textSize="18sp" />

</RelativeLayout>