<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="1dp"  
        android:layout_marginLeft="-1dp" >

        <Button
         	android:id="@+id/button_start"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_alignRight="@android:id/text2"
         	android:layout_marginRight="5dp"
         	android:layout_marginTop="5dp"
         	android:background="@android:drawable/btn_default"
         	android:onClick="sendToLoginPage"
            android:text="@string/start"
         	android:width="160dp" /> 
         	
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="-1dp"
            android:contentDescription="@string/description"
            android:src="@drawable/squirrel1_ins" />
        
        <TextView android:id="@android:id/text2" 
            style="?android:textAppearanceMedium"
            android:lineSpacingMultiplier="1.2"
            android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_below="@+id/button_start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/imageView1"
            android:enabled="false"
            android:includeFontPadding="false"
            android:scrollHorizontally="false"
         	android:width="320dp" 
         	android:textColor="#5A5A5A" 
         	android:autoLink="all"
    		android:linksClickable="true"
    		android:text="@string/instructions1" />
          
    </RelativeLayout>
 
</ScrollView>       
        
       